# Planar_Polygons_Detection

./: CMakeLists.txt  README.md
data/: musee_RDC003.ply  musee_RDC016.ply  musee_RDC017.ply  musee_RDC018.ply  musee_RDC019.ply  musee_RDC020.ply  musee_RDC024.ply  musee_RDC028.ply  musee_RDC033.ply  musee_RDC035.ply  musee_RDC036.ply  musee_RDC045.ply
include/: Estimation.hpp  MSAC.hpp  PlaneFitting.hpp  Polygon.hpp  polygon_visu.hpp
include/LiteGeom/: LgBase.hpp  LgBbox2.hpp  LgBbox3.hpp  LgDistance2.hpp  LgDistance3.hpp  LgIntersection2.hpp  LgIntersection3.hpp  LgLine2.hpp  LgLine3.hpp  LgMat3.hpp  LgPlane3.hpp  LgPoint2.hpp  LgPoint3.hpp  LgPolygon2.hpp  LgSegment2.hpp  LgSegment3.hpp  LgTriangle2.hpp  LgTriangle3.hpp
src/: PolyDetect.cpp
src/internal/: PlaneFitting.cpp
